--- a/APSA_2012/Paper/Bibliography_EBMA.bib
+++ b/APSA_2012/Paper/Bibliography_EBMA.bib
@@ -2,12 +2,53 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Florian Hollenbach at 2012-01-18 14:14:31 -0500 
+%% Created for Michael Ward at 2012-08-10 10:18:38 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@unpublished{hibbs:2012,
+	Author = {Hibbs, Douglas A.},
+	Date-Added = {2012-08-10 17:16:44 +0000},
+	Date-Modified = {2012-08-10 17:18:31 +0000},
+	Note = {\url{http://www.douglas-hibbs.com/HibbsArticles/HIBBS_OBAMA-REELECT-31July2012r1.pdf}},
+	Title = {Obama's Re-election Prospects under `Bread and Peace/ Voting in the 2012 US Presidential Election},
+	Year = {2012}}
+
+@book{mclachlan:peel:2000,
+	Address = {New York, NY},
+	Author = {Geoffrey McLachlan and David Peel},
+	Date-Added = {2012-08-10 17:09:00 +0000},
+	Date-Modified = {2012-08-10 17:10:17 +0000},
+	Publisher = {John Wiley \& Sons, Ltd},
+	Title = {Finite Mixture Models},
+	Year = {2000}}
+
+@article{imai:tingley:2012,
+	Author = {Kosuke Imai and Dustin Tingley},
+	Date-Added = {2012-08-10 17:06:47 +0000},
+	Date-Modified = {2012-08-10 17:07:49 +0000},
+	Journal = {American Journal of Political Science},
+	Month = {January},
+	Number = {1},
+	Pages = {218-236},
+	Title = {A Statistical Method for Empirical Testing of Competing Theories},
+	Volume = {56},
+	Year = {2012}}
+
+@article{mhw:2012,
+	Author = {Jacob M. Montgomery and Florian Hollenbach and Michael D. Ward},
+	Date-Added = {2012-08-10 16:54:10 +0000},
+	Date-Modified = {2012-08-10 16:56:43 +0000},
+	Journal = {Political Analysis},
+	Month = {Summer},
+	Number = {3},
+	Pages = {271-291},
+	Title = {Improving Predictions Using Ensemble Bayesian Model Averaging},
+	Volume = {20},
+	Year = {2012}}
 
 @book{Pool:1964,
 	Address = {Cambridge, MA},
